Wed Apr 27 23:04:53 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac,include/xapian/version.h.in: Define
	  XAPIAN_HAS_xxx_BACKEND for each backend which is enabled.  The
	  bindings need this, and user code might find it useful too.

Wed Apr 27 03:31:50 BST 2005  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,api/ompostlistiterator.cc,
	  api/omtermlistiterator.cc,include/xapian/,
	  queryparser/queryparser.cc: Where end iterator is just
	  FooIterator(NULL) put it inline in the header for efficiency.
	  If we ever need to change an implementation, we can easily move
	  methods back into the library and bump the library version suitably.

Wed Apr 27 02:40:43 BST 2005  Olly Betts <olly@survex.com>

	* examples/quest.cc,include/xapian/queryparser.h,
	  queryparser/queryparser.cc,tests/queryparsertest.cc: Rename
	  QueryParser::set_stemming_options() to set_stemming_strategy()
	  - it's a better name and avoids confusion with the old deprecated
	  method called set_stemming_options().
	* examples/quest.cc: Added stopword handling.
 
Wed Apr 27 02:39:33 BST 2005  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Fixed documentation comment.

Sun Apr 24 03:02:47 BST 2005  Olly Betts <olly@survex.com>

	* api/omstem.cc: Simplified Xapian::Stem::Internal.

Sun Apr 24 02:21:22 BST 2005  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Extended stemlang1 to check that trying to create
	  a stemmer for a non-existent language throws InvalidArgumentError.

Fri Apr 22 01:20:57 BST 2005  Olly Betts <olly@survex.com>

	* include/xapian/document.h: Clearer documentation comments.

Thu Apr 21 15:03:42 BST 2005  Olly Betts <olly@survex.com>

	* docs/overview.html,include/xapian/query.h: Removed lingering
	  references to OP_WEIGHT_CUTOFF.

Thu Apr 21 01:46:51 BST 2005  Olly Betts <olly@survex.com>

	* PLATFORMS: Added success report for Ubuntu 5.04 on x86_64.

Mon Apr 18 02:54:10 BST 2005  Olly Betts <olly@survex.com>
