@@ -372,8 +372,9 @@ used in IR for many decades, quite independently of the probabilistic theory
 which underpins it. Weights of this form are in fact the starting point in
 Xapian when no relevance information is present.
 <P>
-The number n incidentally is often called the <EM>frequency</EM> of a term. We prefer
-the phrase <EM>collection frequency</EM>, or cf, to distinguish it from wdf and wdq
+The number n incidentally is often called the <EM>frequency</EM> of a term.
+We prefer
+the phrase <EM>term frequency</EM>, to better distinguish it from wdf and wqf
 introduced below.
 <P>
 In extreme cases w(t) can be negative. In Xapian negative values are
